# mafl-rust

./: .gitignore  Cargo.toml  HOWTORUN.txt  README.md  TODO
examples/: arrays.mfel  bind.mfel  break.mfel  capture.mfel  catch_throw.mfel  characters.mfel  circular.mfel  classes.mfel  closures.mfel  commands.mfel  comments.mfel  context.mfel  context_mut.mfel  continue.mfel  copy.mfel  ctx_mutation.mfel  curry.mfel  dict.mfel  dynamic.mfel  embed.mafl  embed.rs  endblock.mfel  error.mfel  eval_args.mfel  exit.mfel  functions.mfel  hostnames.txt  iterators.mfel  mafl-parse.rs  memleak.mfel  misc.mfel  modules.mfel  mutual.mfel  numvars.mfel  pipe.mfel  recursion.mfel  ref_deref.mfel  repl.mfel  reserved.mfel  return.mfel  (+16 more)
mafl/: language.mafl  list.mafl  memleak.mafl  test.mafl  xor_nn.mafl
mfel/: arrays.mfel  characters.mfel  closures.mfel  contexts.mfel  contexts2.mfel  contexts3.mfel  curry.mfel  dynamic.mfel  pipe.mfel  recursion.mfel  repl.mfel  stdlib.mfel  struct.mfel  test.mfel  test6.mfel  test7.mfel
src/: ast.rs  builtin.rs  context.rs  context_vec.rs  eval.rs  expr.pest  expression.rs  lib.rs  mafl.pest  main.rs  mfel.pest  open.rs  parse.rs  std.mafl  std.mfel  types.rs
