[package]
name = "mafl"
version = "0.9.6"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
pest = "2.7.5"
pest_derive = { version = "2.7.5", features = ["grammar-extras"] }
rand = "0.8.5"
regex = "1.10.2"
unescape = "0.1.0"
gc = { version = "0.5", features = ["derive"], optional = true }

[features]
default = ["gc","std_internal"]
std_internal = []
